# prismrag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  demo.py  github_setup_guide.md  manual_upload.sh  pyproject.toml  requirements.txt  setup.py  token_setup_guide.md  upload_to_github.sh
.github/workflows/: ci.yml  release.yml
config/: default.yaml
docs/: API.md  DESIGN.md
experiments/: evaluate_model.py  generate_training_data.py  train_prismrag.py
src/: __init__.py
src/data_generation/: __init__.py  distractor_generator.py  evaluators.py  seed_data_generator.py  strategic_cot_generator.py
src/evaluation/: __init__.py  benchmarks.py  evaluator.py  metrics.py
src/training/: __init__.py  data_collator.py  dataset.py  trainer.py
src/utils/: __init__.py  data_utils.py  logging_utils.py  model_utils.py
tests/: test_data_generation.py  test_evaluation.py
